Fix formatter calls for code generation
Change-Id: Iba32e167b9157a9ed6a3720b69882bd2267c7bfe